--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
         <title>Autografia</title>
         <meta charset="UTF-8">
     </head>
-    <body background="c:\Users\anahi\OneDrive\Documents\vc" >
+    <body background="vc" >
         <h1 style="color:hwb(0 0% 100%);text-align: center;">Anahi Muñoz Arreola</h1>
-        <img src="\Users\anahi\OneDrive\Documents\m" widtch="250" height="150"/>
+        <img src="m" widtch="250" height="150"/>
         <p style="color: #141b27; background-color: #b8b1b1b2;text-indent: 20px;">
         Mi nombre es Anahi Muñoz Arreola tengo 16 años, cumplo el <em>23 de septiembre de 2008</em><br>
         estudio en el <strong>cetis 47</strong>en la profecion de programacion.Soy al hermana menor de 2 hermanos,<br>
@@ -67,8 +67,9 @@
             </p>
         <p style="color: #141b27; background-color: #b8b1b1b2; ">  
             Mis redes sociales:<br>
-            <a href="https://www.instagram.com">Instagram</a> <img src="c:\Users\anahi\OneDrive\Documents\i" width="20" height="23"><br>
-            <a href="https://es-la.facebook.com">Facebook</a> <img src="c:\Users\anahi\OneDrive\Documents\f" width="21" height="23">
+            <a href="https://www.instagram.com">Instagram</a> <img src="i" width="20" height="23"><br>
+            <a href="https://es-la.facebook.com">Facebook</a> <img src="f" width="21" height="23">
         </p>
     </body>
+
 </html>
