--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Autografia</title>
         <meta charset="UTF-8">
     </head>
-    <body background="vc" >
+    <body background="vc" style="background-repeat: no-repeat;background-position: center;background-size: cover;"  >
         <h1 style="color:hwb(0 0% 100%);text-align: center;">Anahi Muñoz Arreola</h1>
         <img src="m" widtch="250" height="150"/>
         <p style="color: #141b27; background-color: #b8b1b1b2;text-indent: 20px;">
@@ -73,3 +73,4 @@
     </body>
 
 </html>
+
