--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Cuando tenia 13 años me empezo a gustar mucho los libros de diferente tipo comedia,<br>
                 romance,terror no se si antes ni me gustaba leer ahora es uno de mis pasatiemposmas favoritos<br>
                 el primer libro que lei si no mal lo recuerdo fue el de romeo y julieta no se porque solo me intereso ya que habia visto su obra<br>
-                y me llamo la atencion 
+                y me llamo la atencion, que es muy interesante.
             </p>
             <p style="color: #141b27; background-color: #b8b1b1b2;text-align: center;text-decoration: underline;">
                 Mis <strong>comidas</strong> favoritas:
@@ -73,4 +73,5 @@
     </body>
 
 </html>
+
 
