--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
                     <li>Alitas</li>
                 </ol>
             </p>
+            <p style="color:#141b27;background-color: #b8b1b1b2;text-align: center;text-decoration: underline;">
+                 Mis <em>Libros</em> favoritos son:
+            <table border="4" style="color: #b8b1b1b2; background-color:#141b27;" >
+               <tr>
+                    <td>Tacones y mazmorras</td><td>Anabel García</td><td>Comedia</td><td>453 páginas</td>
+                </tr>
+                <tr>
+                    <td>La casa embrujada: Una pesadilla en la familia </td><td>Ed Warren,Lorraine Warren</td><td>Terror</td><td>280 páginas</td>
+                </tr>
+                <tr>
+                    <td>Rey de la ira</td><td>Ana Huang</td><td>Romance</td><td>493</td>
+                </tr>
+            </table>
+            </p>
+        
         <p style="color: #141b27; background-color: #b8b1b1b2; ">  
             Mis redes sociales:<br>
             <a href="https://www.instagram.com">Instagram</a> <img src="i" width="20" height="23"><br>
@@ -73,5 +88,6 @@
     </body>
 
 </html>
+
 
 
