--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ol>
         </p>
         <p style="color:#141b27;background-color: #b8b1b1b2;text-align: center;text-decoration: underline;">
-        Ms <em>series</em> favoritas son:</p>
+        Mis <em>series</em> favoritas son:</p>
             <table border="4" style="color: #b8b1b1b2; background-color:#141b27;" >
                <tr>
                     <td>The witcher</td><td>3 temporadas de 8 capitulos</td><td>102.5 millones de vistas</td><td>Netflix</td>
@@ -66,7 +66,7 @@
                 </ol>
             </p>
             <p style="color:#141b27;background-color: #b8b1b1b2;text-align: center;text-decoration: underline;">
-                 Mis <em>Libros</em> favoritos son:
+                 Mis <em>Libros</em> favoritos son:</p>
             <table border="4" style="color: #b8b1b1b2; background-color:#141b27;" >
                <tr>
                     <td>Tacones y mazmorras</td><td>Anabel García</td><td>Comedia</td><td>453 páginas</td>
@@ -78,7 +78,7 @@
                     <td>Rey de la ira</td><td>Ana Huang</td><td>Romance</td><td>493</td>
                 </tr>
             </table>
-            </p>
+            
         
         <p style="color: #141b27; background-color: #b8b1b1b2; ">  
             Mis redes sociales:<br>
@@ -88,6 +88,7 @@
     </body>
 
 </html>
+
 
 
 
